Fix form button alignment on main page

--- a/src/assets/styles.css
+++ b/src/assets/styles.css
@@ -122,7 +122,7 @@ background: #e67e22;
 /*форма*/
 .contact-form {
   display: flex;
-  align-items: flex-start;
+  align-items: flex-end;
   gap: 15px;
   background: rgba(255, 255, 255, 0.9);
   padding: 22px;
@@ -130,6 +130,7 @@ background: #e67e22;
   transform: scale(1.6);
   transform-origin: center;
   position: relative;
+  margin-bottom: 20px;
 }
 
 .contact-form > div {
@@ -137,7 +138,8 @@ background: #e67e22;
   flex-direction: column;
   position: relative;
   min-width: 150px;
-  margin-bottom: 25px;
+  margin: 0;
+  padding: 0;
 }
 
 .contact-form input {
@@ -148,6 +150,8 @@ background: #e67e22;
   border-radius: 2px;
   opacity: .8;
   box-sizing: border-box;
+  height: 35px;
+  margin: 0;
 }
 
 .contact-form button {
